Better code reuse